Wed Oct  9 12:38:27 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (exec_prefix, bindir, libdir, includedir,
	datadir): Unused variables removed.

Wed Oct  9 12:26:21 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (librarydir): Unused variable removed.

Wed Oct  9 12:17:19 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Create $(GNUSTEP_MAKEFILES)/Auxiliary
	directory, for auxiliary makefiles provided by packages.

Mon Oct  7 18:19:27 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/framework.make ($(DUMMY_FRAMEWORK_OBJ_FILE)): Wrap the
	compilation in ECHO_COMPILE / END_ECHO (Patch by Stefan Urbanek
	<urbanek@host.sk>).

Sat Oct  5 01:59:47 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* ld_lib_path.sh (guile_paths): Removed setting up guile_paths
	from here ...
	* GNUstep.sh.in (guile_paths): ... and added it here.  The
	difference is that GNUstep.sh is executed only once at login,
	while ld_lib_path.sh is executed also each time an application is
	started, to setup the additional linker library paths for that
	specific application.
	* ld_lib_path.csh, GNUstep.csh.in (guile_paths): Idem.
	
Sat Oct  5 01:05:47 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* mkinstalldirs (MKDIR): Do not test for 'mkdir -p'; always use
	'mkdir'.  The test for 'mkdir -p' was itself subject to race
	conditions.  Do not echo what is done.

Sat Oct  5 00:50:41 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* executable.template.in (app): Do not run a sed subprocess to
	remove / at the end of name.  Do not run a sed subprocess to
	remove .app at the end of the name.  Run a basename subprocess
	only if the executable name can't be determined from the
	Info-gnustep.plist.  Rewritten a comparison against basename $app,
	no longer meaningful, to be against $0.

Sat Oct  5 00:28:02 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* openapp.in: Removed aesthetical semicolon.

Fri Oct  4 14:45:53 2002  Nicola Pero  <n.pero@mi.flashnet.it>
