@@ -1,4 +1,4 @@
-@c \input texinfo   @c -*-texinfo-*-
+@i \input texinfo   @c -*-texinfo-*-
 @setfilename machines.info
 @ifclear HOWTO
 @c Machine Specific, Darwin 5.x/PowerPC, , (DIR)
@@ -42,6 +42,28 @@ to use the recommended compiler for compiling GNUstep, as GNUstep is quite
 complex and tends provoke a lot of errors in some compilers. Even versions
 newer than the listed compiler may not work, so don't just get the latest
 version of a compiler expecting it to be better than previous versions.
+
+Compiler notes: If a recommended compiler is not listed, take note of the
+following information before choosing the compiler you use.
+@table @samp
+@item egcs or gcc < 2.95
+Probably will work, but few people use these now.
+@item gcc 2.95.x
+Probably the oldest compiler that GNUstep is regularly tested with.
+@item gcc 2.96
+Not an official gcc release. Some versions (Redhat, Mandrake) have problems
+that prevent GNUstep from being compiled correctly and cause
+mysterious errors.
+@item gcc 3.0.x
+A fairly good compiler. Recommended.
+@item gcc 3.1
+Several bugs where introduced in the version. It's probably better to
+avoid this one, although it might work fine.
+@item gcc 3.2
+Pretty good, although at the time of this writing it hasn't been
+fully tested on many platforms. Recommended.
+@end table
+
 
 If you have compiled GNUstep on a specific machine, please send information
 about what you needed and any special instructions needed to the
@@ -126,7 +148,7 @@ Unknown
 
 @c -----------------------------------------
 @node FreeBSD 4.x, FreeBSD 3.x, Debian/DEC-Alpha, Machine Specific
-@section FreeBSD 3.x
+@section FreeBSD 4.x
 
 @table @samp
 @item Recommended compiler
@@ -140,12 +162,15 @@ executing GNUstep.sh. Try turing on SH_WORD_SPLIT (e.g. 'zsh
 --sh-word-split', 'zsh -o shwordsplit', 'zsh -y' or by setting 'setopt
 SH_WORD_SPLIT' in one of zsh's startup files.)
 
+For gcc 3.0.4, make WANT_THREADS_SUPPORT=YES
+
+For libxml2 2.4.24, make WITHOUT_PYTHON=YES
+
 @end table
 
 @c -----------------------------------------
 @node FreeBSD 3.x, FreeBSD 2.x, FreeBSD 4.x, Machine Specific
 @section FreeBSD 3.x
-@c contact: David Lazaro <khelekir@encomix.es>
 
 Compiles "out of the box" on FreeBSD 3.4.
 
@@ -256,26 +281,18 @@ CC=egcs LDFLAGS="-u shmctl@@GLIBC_2.2 -L/lib -lc -u getpwuid_r@@GLIBC_2.1.2
 
 @table @samp
 @item Recommended compiler
-egcs-1.1.2 (default compiler), or
-gcc-2.95. gcc-3.x works, but gdb can't debug GNUstep executables.
+The default compiler. gcc-3.x works, but you need a new gdb also to debug.
 
 @item Extra libs needed 
 None.
 
 @item Special Instructions 
-You need to compile without optimization or the compiler will not be
-able to compile several files (CFLAGS="" ./configure). Compiling with
-CFLAGS="-O" also works. The gcc-2.95 compiler fixes this problem.  There
-may be a problem with the X server that causes programs to crash with a
-X_QueryColors error. If so, get a newer X server at
-@url{ftp://ftp.linuxppc.org/linuxppc/contrib/linuxppc-1999/software/XFree86-FBDev-3.3.3.1-49b.ppc.rpm} (or better).
 
 @end table
 
-Invocations (and DO) do not work well. The major problem is sending data
-with data sizes less than 4 bytes (chars, shorts, etc).  To fix this, we
-recommend using the ffcall libraries (Read the instructions on this in the
-configuration section).
+ffcall or libffi is required for 
+invocations (and DO) to work well. The major problem is sending data
+with data sizes less than 4 bytes (chars, shorts, etc). 
 
 @c -----------------------------------------
 @node Irix 6.5/MIPS, MkLinux/PowerPC, GNU-Linux/PowerPC, Machine Specific
@@ -301,7 +318,6 @@ Static libs only (make shared=no).
 @c -----------------------------------------
 @node MkLinux/PowerPC, NetBSD, Irix 6.5/MIPS, Machine Specific
 @section MkLinux/PowerPC (MkLinux DR 3)
-@c Contact: Adam Fedor <fedor@gnu.org>
 
 @table @samp
 @item Recommended compiler
@@ -325,7 +341,6 @@ and glibc library (which has the threads library) and install both.
 @c -----------------------------------------
 @node NetBSD, Netwinder, MkLinux/PowerPC, Machine Specific
 @section NetBSD 
-@c Contact: : David Wetzel <dave@turbocat.de>
 
 @table @samp
 @item Recommended compiler
@@ -366,7 +381,8 @@ Unknown
 Unknown
 
 @item Special Instructions 
-Can only compile with static libraries. Gives a lot of warnings
+Can only compile with static libraries. Gives a lot of warnings.
+Try reading the README.NetBSD which might work the same on OpenBSD.
 @end table
 
 @c -----------------------------------------
@@ -396,8 +412,6 @@ ADDTIONAL_TOOL_LIBS in the GNUmakefile(.preamble).
 @c -----------------------------------------
 @node Slackware/Intel, Solaris 2.5.1/Sparc, OSF/Alpha, Machine Specific
 @section Slackware/Intel 
-
-GNUstep has been tested on version 8.0 of Suse
 
 @table @samp
 @item Recommended compiler
@@ -673,13 +687,7 @@ CPPFLAGS=-I/usr/include/win32api ./configure
 
 Make sure you have good shared libraries for everthing. Sometimes a bad
 shared library (like libtiff) will cause odd and untraceable problems.
-See the README.MinGW for information on good libraries.
-
-Make sure files and compilation
-done in Unix mode (no ^M in files, @var{export CYGWIN=binmode} usually
-works if cygwin is not buggy).  Gdomap services not set up
-correctly. Must add services lines to @file{C:\WINDOWS\services} (on
-Windows 98) or xxx (on Windows NT).  Native GUI backend is alpha version.
+See @file{README.Cygwin} for information on compiling.
 
 @c -----------------------------------------
 @node Windows with MinGW,  , Windows with CYGWIN, Machine Specific
