@@ -372,6 +372,14 @@ You could also be having problems with gcc. gcc 2.96 does not work
 @node Problems with Alt key, Problems with gcc3, Problems compiling, Troubleshooting
 @subsection Problems with Alt key
 
+It's possible the Alt key is not where you think it is or is defined
+incorrectly. Try running the GSTest application, KeyboardInput test
+(located in the examples package 
+at @url{ftp://ftp.gnustep.org/pub/gnustep/core}) to test it.
+See
+@url{http://www.gnustep.org/resources/documentation/gnustep-gui_6.html#SEC43}
+for information on how to change the settings.
+
 If you are using WindowMaker, it's possible it is grabing this key and
 using it for itself. To check, open Window Maker's WPrefs and go to the
 Mouse Preferences. Then use another value for the "Mouse grab modifier"
