@@ -1,3 +1,9 @@
+2002-10-09  Adam Fedor  <fedor@gnu.org>
+
+	* Documentation/GNUmakefile: Add userfaq target
+	* Documentation/userfaq.texi: Update.
+	* Documentation/machines.texi: Idem.
+
 Wed Oct  9 12:38:27 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* GNUmakefile.in (exec_prefix, bindir, libdir, includedir,
